stuck on the styling for now. need to make sure it's responsive

--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,35 @@
-.formContainer {
-  position: absolute;
-  left: 0%;
-  right: 0%;
-  top: 26.85%;
-  bottom: 44.7%;
-  background: #120F23;
+@media only screen and (min-width: 768px){
+  #formContainer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+    left: 0%;
+    text-align: center;
+    /*right: 0%;
+    top: 26.85%;
+    bottom: 44.7%;*/
+    background: #120F23;
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (max-width: 767px){
+  #formContainer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+    left: 0%;
+    background: #120F23;
+    display: flex;
+    flex-direction: column;
+  }
+};
+
+.item {
+  margin: 30px;
 }
 
 .formTitle {
@@ -17,34 +42,96 @@
   font-family: Open Sans;
   font-style: normal;
   font-weight: bold;
-  line-height: 30px;
-  font-size: 24px;
+  line-height: 200%;
+  font-size: 120%;
+  text-align: left;
 
   color: #94AEBF;
 }
 
-.formField {
+#inputForm {
+  /*width: 30%;*/
   position: absolute;
   left: 37.15%;
   right: 29.51%;
-  top: 39.06%;
+  top: 50.06%;
   bottom: 54.9%;
+  display: flex;
+  text-align: center;
+  /*justify-content: space-between;*/
+  flex-wrap: wrap;
+}
 
-  background: #FFFFFF;
+.formField {
+  /*padding: 16px 10px;*/
+  background: #2A2739;
   mix-blend-mode: normal;
-  opacity: 0.1;
+  /*opacity: 0.1;*/
   border-radius: 5px;
+  border: none;
+  border-color: transparent;
+}
+
+input[type=text] {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 32px;
+  font-size: 24px;
+  height: 1em;
+  color: #FFFFFF;
+  opacity: 0.5;
+  mix-blend-mode: normal;
+  border-radius: 2px;
+}
+
+::placeholder {
+  position: absolute;
+
+/*  left: 38.89%;
+  right: 42.29%;*/
+  /*top: 40.21%;*/
+  /*bottom: 55.49%;*/
+
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 32px;
+  font-size: 24px;
+
+  color: #FFFFFF;
+  opacity: 0.5;
+  mix-blend-mode: normal;
 }
 
 .button {
-  position: absolute;
+/*  position: absolute;
   left: 71.88%;
   right: 17.78%;
   top: 38.66%;
   bottom: 54.63%;
+  font-size: 200%
+  padding: 20px;
 
   background: #ED1F34;
-  border-radius: 5px;
+  border-radius: 5px;*/
+  background-color: #ED1F34; /* Green */
+  /*position: absolute; */
+  left: 71.88%;
+  right: 17.78%;
+  top: 38.66%;
+  bottom: 54.63%;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  height: 1.5em;
+  border-radius: 2px;
+  /*margin-left: 5px;*/
+  /*margin: 15% 72%;*/
+  cursor: pointer;
 }
 
 .buttonText {
@@ -64,12 +151,21 @@
   color: #FFFFFF;
 }
 
+input[type=checkbox] {
+  position: absolute;
+  left: 37%;
+  right: 36.74%;
+  top: 70.15%;
+  bottom: 50.09%;
+}
+
 .agreement {
   position: absolute;
   left: 38.61%;
   right: 36.74%;
-  top: 46.15%;
+  top: 70.15%;
   bottom: 50.09%;
+  text-align: left;
 
   font-family: Open Sans;
   font-style: normal;
@@ -78,8 +174,4 @@
   font-size: 12px;
 
   color: #888888;
-}
-
-input {
-  width: 30%;
 }
